Modernize String API: strip, isEmpty, isBlank, repeat